--- a/led_display/led.html
+++ b/led_display/led.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Sample illustrating the use of Web Bluetooth / Automatic Reconnect (Async Await).">
     <meta name="viewport" content="width=device-width, initial-scale=1">
    
-   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
+   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet"> 
 		   
     <title>Web BT / Automatic Reconnect</title>
     <script>
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <h1 style="font-family: 'Open Sans'; font-size:22px; color: #000080"><img class="pageIcon" src="vtt_logo.jpg" align="top">    
+    <h1 style="font-family: 'Open Sans';font-weight:800;font-size:22px;color: #000080"><img class="pageIcon" src="vtt_logo.jpg" align="top">    
 	LED DISPLAY DEMO</h1>
 	<hr>
     
@@ -84,7 +84,7 @@
 
 <div style="text-align:center">  
 	<form align="center">
-	  <textarea id="displaymsg" cols="30" rows="5" style="font-size: 14pt;background-color: #f8f9f9;" wrap="virtual" placeholder="Only alphanumeric characters allowed..."></textarea>
+	  <textarea id="displaymsg" cols="30" rows="5" style="font-size: 14pt;background-color: #f8f9f9;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea>
 	  </p>
 	  <button style="font-size:20px;font-weight:600;height:80px;width:200px">SEND</button>
 	</form>
