--- a/led_display/led.html
+++ b/led_display/led.html
@@ -84,7 +84,7 @@
 
 <div style="text-align:center">  
 	<form align="center">
-	  <textarea id="displaymsg" cols="30" rows="5" style="font-size: 14pt;background-color: #f8f9f9;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea>
+	  <textarea id="displaymsg" cols="30" rows="3" style="font-size: 14pt;background-color: #f8f9f9;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea>
 	  </p>
 	  <button style="font-size:20px;font-weight:600;height:80px;width:200px">SEND</button>
 	</form>
@@ -126,7 +126,7 @@
 </table>
 
 <h3 style="display:none;>Live output</h3>
-<div id="output" class="output" style="display:none>
+<div id="output" class="output" >
   <div id="content"></div>
   <div id="status"></div>
   <pre id="log"></pre>
