--- a/led_display/led.html
+++ b/led_display/led.html
@@ -84,7 +84,7 @@
 
 <div style="text-align:center">  
 	<form align="center">
-	  <textarea id="displaymsg" cols="30" rows="3" style="font-size: 14pt;background-color: #f8f9f9;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea>
+	  <textarea id="displaymsg" cols="30" rows="3" style="font-size: 14pt;background-color: #f0f8ff;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea>
 	  </p>
 	  <button style="font-size:20px;font-weight:600;height:80px;width:200px">SEND</button>
 	</form>
