--- a/led_display/led.html
+++ b/led_display/led.html
@@ -124,8 +124,8 @@
   </tr>
 </table>
 
-<h3 style="display:none;>Live output</h3>
-<div id="output" class="output" >
+<h3>Live output</h3>
+<div id="output" class="output">
   <div id="content"></div>
   <div id="status"></div>
   <pre id="log"></pre>
