--- a/led_display/led.html
+++ b/led_display/led.html
@@ -124,7 +124,7 @@
   </tr>
 </table>
 
-<h3>Live output...</h3>
+<h3>Live output:</h3>
 <div id="output" class="output">
   <div id="content"></div>
   <div id="status"></div>
@@ -217,8 +217,8 @@ async function connect() {
 				msg_data[1] = (displaymessage.length+1) % number_payload_bytes;
 				}								
 
-			msg_data[2] = 0; 										// data start index 2(uint16_t)
-			msg_data[3] = m; 										// data start index 1(uint16_t)
+			msg_data[2] = m; 										// data start index 2(uint16_t)
+			msg_data[3] = 0; 										// data start index 1(uint16_t)
 			
 			//msg_data[4-19] contain the data to be displayed
 		
