--- a/led_display/led.html
+++ b/led_display/led.html
@@ -124,7 +124,7 @@
   </tr>
 </table>
 
-<h3>Live output:</h3>
+<h3>Live output...</h3>
 <div id="output" class="output">
   <div id="content"></div>
   <div id="status"></div>
