--- a/led_display/led.html
+++ b/led_display/led.html
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <h1 style="font-family: 'Open Sans';font-weight:800;font-size:24px;padding:4px;color: #000080";><img class="pageIcon" src="vtt_logo.jpg" align="top"> LED DISPLAY DEMO</h1>
+    <h1 style="font-family: 'Open Sans';font-weight:800;font-size:24px;padding-right:4px;color: #000080";><img class="pageIcon" src="vtt_logo.jpg" align="top"> LED DISPLAY DEMO</h1>
 	<hr>
     
 <script>
