--- a/led_display/led.html
+++ b/led_display/led.html
@@ -28,7 +28,7 @@
   </head>
 
   <body>
-    <h1 style="font-family: 'Open Sans';font-weight:800;font-size:24px;padding-left:10px;color: #000080";><img class="pageIcon" src="vtt_logo.jpg" align="top" style="padding-right:10px;">LED DISPLAY DEMO</h1>
+    <h1 style="font-family: 'Open Sans';font-weight:800;font-size:24px;padding-left:10px;color: #000080";><img class="pageIcon" src="vtt_logo.jpg" align="top" style="padding-top:3px;padding-right:10px;">LED DISPLAY DEMO</h1>
 	<hr>
     
 <script>
