--- a/led_display/led.html
+++ b/led_display/led.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Sample illustrating the use of Web Bluetooth / Automatic Reconnect (Async Await).">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="theme-color" content="#bcdbf5" />
    
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet"> 
 		   
