--- a/led_display/led.html
+++ b/led_display/led.html
@@ -24,7 +24,7 @@
       });
     </script>
         
-    <link rel="icon" href="icon.png">
+    <link rel="icon" href="vttlogo.png">
     
   </head>
 
