--- a/led_display/led.html
+++ b/led_display/led.html
@@ -160,8 +160,8 @@ async function onButtonClick() {
   // TODO: Validate message text.
 
   var rawdisplaymessage = document.getElementById('displaymsg').value;
-  var replace_scandic_char_1 = rawdisplaymessage.replace("ä", "a");
-  var replace_scandic_char_2 = replace_scandic_char_1.replace("ö", "o");
+  var replace_scandic_char_1 = rawdisplaymessage.replace(/ä/g, "a");
+  var replace_scandic_char_2 = replace_scandic_char_1.replace(/ö/g, "o");
   displaymessage = replace_scandic_char_2.replace(/[^a-z0-9_\ ]/gi,'');
 
   //var displaymessage = String(userinput.value);
