first fully functioning version

--- a/led_display/led.html
+++ b/led_display/led.html
@@ -165,14 +165,15 @@ async function onButtonClick() {
   var replace_scandic_char_3 = replace_scandic_char_2.replace(/ö/g, "o");
   var replace_scandic_char_4 = replace_scandic_char_3.replace(/Ö/g, "O");
   
-  displaymessage = replace_scandic_char_4.replace(/[^a-z0-9_\ ]/gi,'');
+  displaymessage = replace_scandic_char_4.replace(/[^a-z0-9!#%&?_\ ]/gi,'');
 
   //var displaymessage = String(userinput.value);
   log('>>> ' + displaymessage);
   
   if (displaymessage.length < 1) {
 	document.getElementById("p5").innerHTML = "Message could not be parsed...";
-	return;}
+	return;
+	}
   
   if (bluetoothDevice != null) {
       connect();
