--- a/led_display/led.html
+++ b/led_display/led.html
@@ -165,7 +165,7 @@ async function onButtonClick() {
   var replace_scandic_char_3 = replace_scandic_char_2.replace(/ö/g, "o");
   var replace_scandic_char_4 = replace_scandic_char_3.replace(/Ö/g, "O");
   
-  displaymessage = replace_scandic_char_4.replace(/[^a-z0-9!#%&?_\-\ ]/gi,'');
+  displaymessage = replace_scandic_char_4.replace(/[^a-z0-9!#%&?_\ -]/gi,'');
 
   //var displaymessage = String(userinput.value);
   log('>>> ' + displaymessage);
@@ -181,7 +181,7 @@ async function onButtonClick() {
   else{
 	  try {
 		log('Requesting any Bluetooth Device...');
-		document.getElementById("p5").innerHTML = "Searching for Bluetooth Devices...";
+		document.getElementById("p5").innerHTML = "Searching for Bluetooth device...";
 		bluetoothDevice = await navigator.bluetooth.requestDevice({
 		 // filters: [...] <- Prefer filters to save energy & show relevant devices.
 		acceptAllDevices: true, optionalServices: [serviceUuid]});
@@ -190,6 +190,7 @@ async function onButtonClick() {
 		connect();
 	  } catch(error) {
 		log('Error! ' + error);
+		document.getElementById("p5").innerHTML = "Connection failed...";
 	  }
   }
 }
