--- a/led_display/led.html
+++ b/led_display/led.html
@@ -125,8 +125,9 @@
   </tr>
 </table>
 
-<h3 style="display:none;>Live output.</h3>
-<div id="output" class="output" style="display:none;>
+<h3>Live output.</h3>
+<div id="output" class="output"> 
+ <!-- style="display:none; -->
   <div id="content"></div>
   <div id="status"></div>
   <pre id="log"></pre>
