--- a/led_display/led.html
+++ b/led_display/led.html
@@ -79,7 +79,7 @@
   });
 </script>
 
-<p style="font-family: 'Open Sans'; font-size:18px;";>Send data to VTT Led Display using Web Bluetooth API and VTT TinyNode.</p>
+<p style="font-family: 'Open Sans'; font-size:18px;";>Send data to VTT Led Display using Web Bluetooth API and VTT TinyNode. Latest Google Chrome browser required.</p>
 </p>
 
 <div style="text-align:center">  
@@ -119,6 +119,7 @@
 
 <hr>
 <p style="font-family: 'Open Sans'; font-size:8px; font-weight:600; text-align: center;">Made by VTT Finland 2017.</p>
+<p style="font-family: 'Open Sans'; font-size:8px; font-weight:600; text-align: center;">Disclaimer: This feature is non-standard and is not on a standards track. It will not work for every user. There may also be large incompatibilities between implementations and the behavior may change in the future.</p>
  <table width="100%" align="center">
   <tr>
     <td style="text-align: left;"><p id="p5" style="font-family: 'Open Sans'; font-size:11px;">Ready for connection...</p></td>
