--- a/led_display/led.html
+++ b/led_display/led.html
@@ -79,7 +79,7 @@
   });
 </script>
 
-<p style="font-family: 'Open Sans'; font-size:18px;";>Send data to VTT Led Display using Web Bluetooth API and VTT TinyNode. Latest Google Chrome browser required.</p>
+<p style="font-family: 'Open Sans'; font-size:18px;";>Send data to VTT Led Display using Web Bluetooth API and VTT TinyNode. Latest <b>Google Chrome browser</b> required.</p>
 </p>
 
 <div style="text-align:center">  
