--- a/led_display/led.html
+++ b/led_display/led.html
@@ -84,8 +84,12 @@
 
 <div style="text-align:center">  
 	<form align="center">
-	  <textarea id="displaymsg" cols="30" rows="3" style="font-size: 14pt;background-color: #f0f8ff;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea>
-	  </p>
+	  <textarea id="displaymsg" cols="30" rows="3" style="font-size: 14pt;background-color: #f0f8ff;margin-bottom:8px;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea>
+<table width="100%" align="center">
+  <tr>
+    <td style="text-align: left;background-color: #f8f9f9;"><p id="p5" style="font-family: 'Open Sans'; font-size:11px;">> Ready for connection...</p></td>
+  </tr>
+</table>
 	  <button style="font-size:20px;font-weight:600;height:80px;width:200px">SEND</button>
 	</form>
 </div>
@@ -120,12 +124,7 @@
 <hr>
 <p style="font-family: 'Open Sans'; font-size:8px; font-weight:600; text-align: center;">Made by VTT Finland 2017.</p>
 <p style="font-family: 'Open Sans'; font-size:8px; font-weight:600; text-align: center;">Disclaimer: This feature is non-standard and is not on a standards track. It will not work for every user. There may also be large incompatibilities between implementations and the behavior may change in the future.</p>
- <table width="100%" align="center">
-  <tr>
-    <td style="text-align: left;"><p id="p5" style="font-family: 'Open Sans'; font-size:11px;">Ready for connection...</p></td>
-	<td style="text-align: right;"><p id="p4" style="font-family: 'Open Sans'; font-size:11px;"> </p></td>
-  </tr>
-</table>
+
 
 <h3 style="display:none;>Live output.</h3>
 <div id="output" class="output" style="display:none;> 
@@ -172,7 +171,7 @@ async function onButtonClick() {
   log('>>> ' + displaymessage);
   
   if (displaymessage.length < 1) {
-	document.getElementById("p5").innerHTML = "Message could not be parsed...";
+	document.getElementById("p5").innerHTML = "> Message could not be parsed...";
 	return;
 	}
   
@@ -182,7 +181,7 @@ async function onButtonClick() {
   else{
 	  try {
 		log('Requesting any Bluetooth Device...');
-		document.getElementById("p5").innerHTML = "Searching for Bluetooth device...";
+		document.getElementById("p5").innerHTML = "> Searching for Bluetooth device...";
 		bluetoothDevice = await navigator.bluetooth.requestDevice({
 		 // filters: [...] <- Prefer filters to save energy & show relevant devices.
 		acceptAllDevices: true, optionalServices: [serviceUuid]});
@@ -191,7 +190,7 @@ async function onButtonClick() {
 		connect();
 	  } catch(error) {
 		log('Error! ' + error);
-		document.getElementById("p5").innerHTML = "Connection failed...";
+		document.getElementById("p5").innerHTML = "> Connection failed...";
 	  }
   }
 }
@@ -201,14 +200,14 @@ async function connect() {
     async function toTry() {
 		time('Connecting to Bluetooth device... ');
 		const server = await bluetoothDevice.gatt.connect();
-		document.getElementById("p5").innerHTML = "Connecting to Bluetooth device...";
+		document.getElementById("p5").innerHTML = "> Connecting to Bluetooth device...";
 		
 		log('Getting Service...');
 		const service = await server.getPrimaryService(serviceUuid);
 	
 		log('Getting Characteristic...');
 		const characteristic = await service.getCharacteristic(characteristicUuid);		
-		document.getElementById("p5").innerHTML = "Connection to device established...";
+		document.getElementById("p5").innerHTML = "> Connection to device established...";
 		
 		var num_msgs = Math.floor((displaymessage.length+1)/number_payload_bytes);
 		if ((displaymessage.length+1) % number_payload_bytes != 0){
@@ -271,7 +270,7 @@ async function connect() {
 		//	let encoder = new TextEncoder('utf-8');
 		//	await characteristic.writeValue(encoder.encode(displaymsg));
 
-			document.getElementById("p5").innerHTML = "Sent message '" + displaymessage + "' to led display...";
+			document.getElementById("p5").innerHTML = "> Sent message '" + displaymessage + "' to led display...";
 			} catch(error)
 			{
 				log('Argh! ' + error);
@@ -286,6 +285,7 @@ async function connect() {
 
 function onDisconnected() {
   log('> Bluetooth device disconnected');
+  document.getElementById("p5").innerHTML = "> Bluetooth device disconnected";
   connect();
 }
 
