--- a/led_display/led.html
+++ b/led_display/led.html
@@ -90,7 +90,7 @@
     <td style="text-align: left;background-color: #f8f9f9;"><p id="p5" style="font-family: 'Open Sans'; font-size:11px;">> Ready for connection...</p></td>
   </tr>
 </table>
-	  <button style="font-size:20px;font-weight:600;height:80px;width:200px">SEND</button>
+	  <button style="font-size:20px;font-weight:600;height:80px;width:200px;margin-top:8px;">SEND</button>
 	</form>
 </div>
 <script>
