--- a/led_display/led.html
+++ b/led_display/led.html
@@ -85,14 +85,14 @@
 <div style="text-align:center">  
 	<form align="center">
 	  <textarea id="displaymsg" cols="30" rows="3" style="font-size: 14pt;background-color: #f0f8ff;margin-bottom:8px;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea>
+	  <button style="font-size:20px;font-weight:600;height:80px;width:200px;margin-bottom:8px;">SEND</button>
+	</form>
+</div>
 <table width="100%" align="center">
   <tr>
     <td style="text-align: left;background-color: #f8f9f9;"><p id="p5" style="font-family: 'Open Sans'; font-size:11px;">> Ready for connection...</p></td>
   </tr>
 </table>
-	  <button style="font-size:20px;font-weight:600;height:80px;width:200px;margin-top:8px;">SEND</button>
-	</form>
-</div>
 <script>
   var ChromeSamples = {
     log: function() {
