--- a/led_display/led.html
+++ b/led_display/led.html
@@ -90,7 +90,7 @@
 </div>
 <table width="100%" align="center">
   <tr>
-    <td style="text-align: left;background-color: #f8f9f9;"><p id="p5" style="font-family: 'Open Sans'; font-size:11px;"> > Ready for connection...</p></td>
+    <td style="text-align: left;background-color: #f8f9f9;"><p id="p5" style="font-family: 'Open Sans'; font-size:11px;">&nbsp;> Ready for connection...</p></td>
   </tr>
 </table>
 <script>
