--- a/led_display/led.html
+++ b/led_display/led.html
@@ -11,7 +11,7 @@
    
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" rel="stylesheet"> 
 		   
-    <title>Web BT / Automatic Reconnect</title>
+    <title>VTT LED FOIL DEMO</title>
     <script>
       // Add a global error event listener early on in the page load, to help ensure that browsers
       // which don't support specific functionality still end up displaying a meaningful message.
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <h1 style="font-family: 'Open Sans';font-weight:800;font-size:24px;padding-left:10px;color: #000080";><img class="pageIcon" src="vtt_logo.jpg" align="top" style="padding-top:3px;padding-right:12px;">LED DISPLAY DEMO</h1>
+    <h1 style="font-family: 'Open Sans';font-weight:800;font-size:24px;padding-left:10px;color: #000080";><img class="pageIcon" src="vtt_logo.jpg" align="top" style="padding-top:3px;padding-right:15px;">LED FOIL DEMO</h1>
 	<hr>
 <script>
   var parameters = location.search.substring(1).split("&");
@@ -93,7 +93,7 @@
 
 <div style="text-align:center">  
 	<form align="center">
-	  <textarea id="displaymsg" cols="30" rows="3" style="font-size: 14pt;background-color: #f0f8ff;margin-bottom:8px;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea>
+	  <textarea id="displaymsg" cols="30" rows="3" style="font-size: 14pt;background-color: #f0f8ff;" wrap="virtual" placeholder="Type your message here and press 'SEND'..."></textarea></p>
 	  <button style="font-size:20px;font-weight:600;height:80px;width:200px;margin-bottom:8px;">SEND</button>
 	</form>
 </div>
