--- a/led_display/led.html
+++ b/led_display/led.html
@@ -135,8 +135,8 @@
 <p style="font-family: 'Open Sans'; font-size:8px; font-weight:600; text-align: center;">Disclaimer: This feature is non-standard and is not on a standards track. It will not work for every user. There may also be large incompatibilities between implementations and the behavior may change in the future.</p>
 
 
-<h3 style="display:none;>Live output.</h3>
-<div id="output" class="output" style="display:none;> 
+<h3 style="display:none;">Live output.</h3>
+<div id="output" class="output"> 
  <!-- -->
   <div id="content"></div>
   <div id="status"></div>
