--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo b</h2>
+    <h2>WebBT / TinyNode Demo</h2>
 
 	
 
@@ -313,17 +313,25 @@ function handleCharacteristicValueChanged(event) {
   */
  
   var value = event.target.value;
-  document.getElementById("p5").innerHTML = 'value: ' + value.getUint8(0) + ' ' + value.getUint8(1)+ ' ' + value.getUint8(2) + ' ' + value.getUint8(3) + ' ' + value.getUint8(4) + ' ' + value.getUint8(5) + ' ' + value.getUint8(6) + ' ' + value.getUint8(7) + ' ' + value.getUint8(8) + ' ' + value.getUint8(9) + ' ' + value.getUint8(10) + ' ' + value.getUint8(11) + ' ' + value.getUint8(12) + ' ' + value.getUint8(13) + ' ' + value.getUint8(14) + ' ' + value.getUint8(15) + ' ' + value.getUint8(16) + ' ' + value.getUint8(17) + ' ' + value.getUint8(18) + ' ' + value.getUint8(19);
+  log('value: ' + value.getUint8(0) + ' ' + value.getUint8(1)+ ' ' + value.getUint8(2) + ' ' + value.getUint8(3) + ' ' + value.getUint8(4) + ' ' + value.getUint8(5) + ' ' + value.getUint8(6) + ' ' + value.getUint8(7) + ' ' + value.getUint8(8) + ' ' + value.getUint8(9) + ' ' + value.getUint8(10) + ' ' + value.getUint8(11) + ' ' + value.getUint8(12) + ' ' + value.getUint8(13) + ' ' + value.getUint8(14) + ' ' + value.getUint8(15) + ' ' + value.getUint8(16) + ' ' + value.getUint8(17) + ' ' + value.getUint8(18) + ' ' + value.getUint8(19));
   
   var dataType = value.getUint8(0);
 
   if (dataType == 1) { 	// Acceleration data
 
-//		var x1 = parseFloat(handleAccData(4, value)).toFixed(2);
-//		var y1 = parseFloat(handleAccData(6, value)).toFixed(2);
-//		var z1 = parseFloat(handleAccData(8, value)).toFixed(2);
-//		log('x: ' + x1 + ' y: ' + y1 + ' z: ' + z1);
+  msgcounter = msgcounter + 1;
+  
+		var x1 = parseFloat(handleAccData(4, value)).toFixed(2);
+		var y1 = parseFloat(handleAccData(6, value)).toFixed(2);
+		var z1 = parseFloat(handleAccData(8, value)).toFixed(2);
+		log('x: ' + x1 + ' y: ' + y1 + ' z: ' + z1);
 		
+		  document.getElementById("p1").innerHTML = "X: " + x1;
+		  document.getElementById("p2").innerHTML = "Y: " + y1;
+		  document.getElementById("p3").innerHTML = "Z: " + z1;
+		  document.getElementById("p4").innerHTML = "Messages: " + msgcounter;
+		  
+		  ts.append(new Date().getTime(), x1)
 		
   }else if (dataType == 2){						// Environment data
   
