--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 <p>Connect and read data from VTT TinyNode<a id="p7" style="font-weight:600; color:#33ff33;"><a>.</p>
  <table style="width:100%">
+ <tr>
+	<td style="width:50%"><input type="radio" name="gender" value="male" checked> Male<br></td>
+	<td style="width:50%"><input type="radio" name="gender" value="female"> Female<br></td>
+ </tr>
   <tr>
     <td style="width:50%"><button style="height:50px;width:100%" id="connect">CONNECT</button></td>
     <td style="width:50%"><input style="height:50px;width:100%" id="disconnect" onclick="disconnect()" type="button" value="DISCONNECT" disabled="true" /></td>
