--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT / TinyNode Demo a</h2>
+    <h2>WebBT / TinyNode Demo v</h2>
 
 	
 
@@ -312,16 +312,20 @@ function time(text) {
 }
 
 function handleCharacteristicValueChanged(event) {
+  
   /* var value = event.target.value;
   log('Received value: ' + value);
   */
-  var selectedData = document.getElementById("gender").value;
+  
+  //var selectedData = document.getElementById("gender").value;
+  var selectedData = document.querySelector('input[name="gender"]:checked').value;
+  
   var value = event.target.value;
   log('value: ' + value.getUint8(0) + ' ' + value.getUint8(1)+ ' ' + value.getUint8(2) + ' ' + value.getUint8(3) + ' ' + value.getUint8(4) + ' ' + value.getUint8(5) + ' ' + value.getUint8(6) + ' ' + value.getUint8(7) + ' ' + value.getUint8(8) + ' ' + value.getUint8(9) + ' ' + value.getUint8(10) + ' ' + value.getUint8(11) + ' ' + value.getUint8(12) + ' ' + value.getUint8(13) + ' ' + value.getUint8(14) + ' ' + value.getUint8(15) + ' ' + value.getUint8(16) + ' ' + value.getUint8(17) + ' ' + value.getUint8(18) + ' ' + value.getUint8(19));
   
   var dataType = value.getUint8(0);
 	
-document.getElementById("p5").innerHTML = selectedData;
+	document.getElementById("p7").innerHTML = "dada " + selectedData;
   if (dataType == 1 && selectedData == 'acc') { 	// Acceleration data
 
   msgcounter = msgcounter + 1;
