--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ function handleCharacteristicValueChanged(event) {
   
   var dataType = value.getUint8(0);
 	
-	document.getElementById("p7").innerHTML = "dada " + selectedData;
+	//document.getElementById("p7").innerHTML = "dada " + selectedData;
   if (dataType == 1 && selectedData == 'acc') { 	// Acceleration data
 
   msgcounter = msgcounter + 1;
@@ -342,7 +342,7 @@ function handleCharacteristicValueChanged(event) {
 		  
 		  ts.append(new Date().getTime(), x1)
 		
-  }else if (dataType == 2){						// Environment data
+  }else if (dataType == 2 && selectedData == 'env'){						// Environment data
   
     // log('value: ' + value.getUint8(0) + ' ' + value.getUint8(1)+ ' ' + value.getUint8(2) + ' ' + value.getUint8(3) + ' ' + value.getUint8(4) + ' ' + value.getUint8(5) + ' ' + value.getUint8(6) + ' ' + value.getUint8(7) + ' ' + value.getUint8(8) + ' ' + value.getUint8(9) + ' ' + value.getUint8(10) + ' ' + value.getUint8(11) + ' ' + value.getUint8(12) + ' ' + value.getUint8(13) + ' ' + value.getUint8(14) + ' ' + value.getUint8(15) + ' ' + value.getUint8(16) + ' ' + value.getUint8(17) + ' ' + value.getUint8(18) + ' ' + value.getUint8(19));
 	msgcounter = msgcounter + 1;
@@ -359,7 +359,11 @@ function handleCharacteristicValueChanged(event) {
   
   switch (dataToStream)
    {
-	case 'p1':  ts.append(new Date().getTime(), presdata);	
+	case 'p1':  if(selectedData == 'acc'){
+					ts.append(new Date().getTime(), presdata);
+					}else{
+					ts.append(new Date().getTime(), x1);
+					}
 				document.getElementById("p1").style.borderBottom = "thick solid #33ff33"; 
 				document.getElementById("p2").style.borderBottom = "thick solid #ffffff";
 				document.getElementById("p3").style.borderBottom = "thick solid #ffffff";
