--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ function handleCharacteristicValueChanged(event) {
   
   switch (dataToStream)
    {
-	case 'p1':  if(selectedData == 'acc'){
+	case 'p1':  if(selectedData == 'env'){
 					ts.append(new Date().getTime(), presdata);
 					}else{
 					ts.append(new Date().getTime(), x1);
