--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo x</h2>
+    <h2>WebBT/TinyNode Demo y</h2>
 
 	
 
@@ -164,8 +164,10 @@ var setter;
 var getter;
 var msgcounter;
 var env_chart = new SmoothieChart({millisPerPixel:10,maxValueScale:1.16,grid:{millisPerLine:6000},yRangeFunction:myYRangeFunction});
-
+var acc_chart = new SmoothieChart({millisPerPixel:10,maxValueScale:1.16,grid:{millisPerLine:6000},yRangeFunction:myYRangeFunction});
 var ts1 = new TimeSeries();
+var ts2 = new TimeSeries();
+var ts3 = new TimeSeries();
 var dataToStream = "p1";
 var selectedData;
 
@@ -231,7 +233,8 @@ function onButtonClick() {
 		document.getElementById("p5").innerHTML = "Measurement started...";
 		document.getElementById("connect").disabled = true;
 		document.getElementById("disconnect").disabled = false;
-		env_chart.visibility = false;
+		env_chart.visibility = 'hidden';
+		
         env_chart.addTimeSeries(ts1, { strokeStyle: 'rgba(0, 255, 0, 1)', lineWidth: 2 });
         env_chart.streamTo(document.getElementById("env_chart"), 200);
 		document.getElementById("p7").innerHTML = " " + bluetoothDevice.name;
