--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
   <body style="font-family: 'Titillium Web', monospace; font-size:18px; margin:10px">
 
-    <h2>WebBT/TinyNode Demo z</h2>
+    <h2>WebBT/TinyNode Demo s</h2>
 
 	
 
@@ -80,10 +80,6 @@ Copyright 2017 Google Inc. All Rights Reserved.
 
 
 <script>
-document.getElementById("gender").onclick=function(){
-  swapCanvases();
-};
-
   var ChromeSamples = {
     log: function() {
       var line = Array.prototype.slice.call(arguments).map(function(argument) {
@@ -123,6 +119,11 @@ document.getElementById("gender").onclick=function(){
 <canvas id="acc_chart" width="340" height="200" style="display: block; margin: 0 auto; border:1px solid #000000; background: #e5e7e9;"></canvas>
 
 <script>
+
+document.getElementById("gender").onclick=function(){
+  swapCanvases();
+};
+
 function swapCanvases(){
   if(env_chart.style.visibility=='visible'){
     env_chart.style.visibility='hidden';
